--- a/Project.html
+++ b/Project.html
@@ -3,7 +3,20 @@
 <html>
     <head>
         <title> Places You Should Visit In Singapore</title>
-        <link rel="stylesheet" href="../CSS/jo.css">
+        <style>
+            td {
+                align-self: center;
+            }
+
+            body {
+                font-family:Verdana, Geneva, Tahoma, sans-serif;
+                background-color: antiquewhite;
+                text-align: center;
+            }
+            td{
+                font-size:larger
+            }
+        </style>
     </head>
     <body>
         <h1> Places You Should Visit In Singapore </h1>
