--- a/myfirstwebpage.html
+++ b/myfirstwebpage.html
@@ -39,17 +39,20 @@
             <li> Student Position: Prefect (Tier 3), CCA Leader (Tier 3) </li>
         </ul>
         <br>
+        <h1> Portfolio</h1>
+        <h2> CCA Contributions</h2>
+        <ol>
+            <li>2022: Founder's Day Event Photographer</li>
+            <li>2022: CCA Awareness Day</li>
+            <li>2023: Founder's Day Event Photographer</li>
+            <li>2023: National Day Event Photographer</li>
+            <li>2024: Chinese New Year Event Photographer</li>
+            <li>2024: 70th Aniversary Event Photographer</li>
+            <li>March-2024: AVA System Operator
+            <li> Rank:CCA Leader</li>
+        </ol>
+       
         <h2><u> Personal Information* </u></h2>
-        <table border="1">
-            <tr>
-                <th> Favourite Food </th>
-                <th> Favorite Drink </th>
-            </tr>
-            <tr>
-                <td> Hainanese Chicken Rice </td>
-                <td> Heaven and Earth: Iced Lemon Tea </td>
-            </tr>
-        </table>
         <h3><u>Weekly Timetable</u> </h3>
         <table border="1" id="tablestyle">
             <tr>
