--- a/myfirstwebpage.html
+++ b/myfirstwebpage.html
@@ -41,16 +41,23 @@
         <br>
         <h1> Portfolio</h1>
         <h2> CCA Contributions</h2>
-        <ul>
-            <li>2022: Founder's Day Event Photographer</li>
-            <li>2022: CCA Awareness Day</li>
-            <li>2023: Founder's Day Event Photographer</li>
-            <li>2023: National Day Event Photographer</li>
-            <li>2024: Chinese New Year Event Photographer</li>
-            <li>2024: 70th Aniversary Event Photographer</li>
-            <li>March-2024: AVA System Operator
-            <li> Rank:CCA Leader</li>
-        </ul>
+        <table>
+            <tr>
+                <th> Year 2022</th>
+                <th> Year 2023</th>
+                <th> Year 2024</th>
+                <th> Additional Contributions</th>
+            </tr>
+            <tr>
+                <td> Founder's Day Photographer</td>
+                <td> Founder's Day Photographer</td>
+                <td> 70th Anniversary Photographer</td>
+                <td> AVA Operator</td>
+            </tr>
+            <tr> CCA Awareness Day</tr>
+            <tr> CCA Awareness Day</tr>
+            <tr> NIL</tr>
+        </table>
        
         <h2><u> Personal Information* </u></h2>
         <h3><u>Weekly Timetable</u> </h3>
