--- a/myfirstwebpage.html
+++ b/myfirstwebpage.html
@@ -36,29 +36,62 @@
             <li id="list-red"> Favourite Colour: Red </li>
             <li id="cha"> I study at <a href="https://meetoh.moe.edu.sg"> Mee Toh School </a></li>
             <li> Class: 6-6</li>
-            <li> Student Position: Prefect (Tier 3), CCA Leader (Tier 3) </li>
         </ul>
         <br>
         <h1> Portfolio</h1>
+        <h2> Key Leadership Positions</h2>
+        <ul>
+            <li> 2019: Class Monitor</li>
+            <li> 2021: Class Monitor</li>
+            <li> 2022: Junior Prefect</li>
+            <li> 2023-2024: Prefect</li>
+            <li> 2023-2024: CCA Leader</li>
+        </ul>
         <h2> CCA Contributions</h2>
-        <table>
-            <tr>
-                <th> Year 2022</th>
-                <th> Year 2023</th>
-                <th> Year 2024</th>
-                <th> Additional Contributions</th>
-            </tr>
-            <tr>
-                <td> Founder's Day Photographer</td>
-                <td> Founder's Day Photographer</td>
-                <td> 70th Anniversary Photographer</td>
-                <td> AVA Operator</td>
-            </tr>
-            <tr> CCA Awareness Day</tr>
-            <tr> CCA Awareness Day</tr>
-            <tr> NIL</tr>
-        </table>
-       
+        <ul>
+            <li> 2022: Founder's Day Photographer </li>
+            <li> 2022: CCA Awareness Day</li>
+            <li> 2022: Teacher's Day Photographer</li>
+            <li> 2023: Founder's Day Photographer</li>
+            <li> 2023: CCA Awareness Day</li>
+            <li> 2023: National Day Celebration Photographer</li>
+            <li> 2024: Chinese New Year Photographer</li>
+            <li> 2024: Mee Toh School's 70th Anniversary Event Photographer</li>
+            <li> March 2023-2024: AVA System Operator</li>
+        </ul>
+        <h2> Skills</h2>
+        <ul>
+            <li> HTML and CSS Coding</li>
+            <li> Scratch</li>
+            <li> Photography </li>
+            <li> Media Production (Canva and Microsoft Office)</li>
+            <li> Post-production (Capcut)</li>
+        </ul>
+        <h2> Experiences</h2>
+        <ul>
+            <li>Canon Immersion Programme</li>
+            <li>Northzone Friendship Hackathon 2022</li>
+            <li>Our Schools, Our Stories (2023 and 2024) (OSOS)</li>
+            <li>Schools Digital Media Awards 2024 (SDMA 2024)</li>
+            <li>Leadership Workshops (hosted by Halogen Foundation, faciliated in school)</li>
+            <li>Young GameMakers (2021)</li>
+            <li>Robotic Escape (2022)</li>
+            <li> Website Wizard (2023)</li>
+            <li> DISSCOVER Learning Journey 2024-Designing Aerial Shows</li>
+        </ul>
+        <h2> School-based and Edusave Awards</h2>
+        <ul>
+            <li> 2019: Edusave Merit Bursary</li>
+            <li> 2019: Commendable Learning Dispositions</li>
+            <li> 2020: Edusave Merit Bursuary</li>
+            <li> 2020: Commendable Learning Dispositions</li>
+            <li> 2021: Edusave Merit Bursary</li>
+            <li> 2022: Edusave Merit Bursary</li>
+            <li> 2022: Catch Me Shine!</li>
+            <li> 2023: Edusave Scholarship</li>
+            <li> 2023: Edusave Award for Achievement, Good Leadership and Service (EAGLES)</li>
+        </ul>
+        
         <h2><u> Personal Information* </u></h2>
         <h3><u>Weekly Timetable</u> </h3>
         <table border="1" id="tablestyle">
