--- a/Hobbies.html
+++ b/Hobbies.html
@@ -100,12 +100,12 @@
                 <td> N/A</td>
             </tr>
             <tr>
-                <td> <img src="flag wars.png" height="216" width="314"><p>Credits: The Guardian</p></td>
+                <td> <img src="flag wars.png" height="216" width="314"></td>
                 <td> The objetcive of this game is to get the team flag from the enemy base and bring it back to your team base.</td>
                 <td> Scriptly Studios </td>
                 <td> <a href="https://web.roblox.com/games/3214114884/Flag-Wars">Click me for Flag Wars</a></td>
                 <td> <iframe width="560" height="315" src="https://www.youtube.com/embed/rHCd5el-FG8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><p> Credits: Cylipson</p></td>
-                <td> <img src="snap.jpeg"></td>
+                <td> <img src="snap.jpeg"><p>Credits: The Guardian</p></td>
                 <td> Photography is the art or practice of taking and processing photographs. I have developed many skills to perfect the art of photography.</td>
                 <td> N/A</td>
             </tr>
