--- a/myfirstwebpage.html
+++ b/myfirstwebpage.html
@@ -20,6 +20,9 @@
             </tr>
         </table>
         </div>
+        <h1> About Me</h1>
+        <br>
+        <p> I am a Primary 6 pupil who is fascinated by the digital world. My love for technology stems from the first time I used my father's computer. Since then, I have pursued my passion and continued to work to being a web designer in hopes of helping others one day. I am also a great leader who can communicate effectively with my team members. With many experience in handling projects, I have learnt how to manage my team members when I work with them and will strive to do my best, possessing a positive mindset.</p>
         <h1><u>Introduction Message</u> </h1>
         <div class="dropdown">
             <img src="IMG_9275.jpg" height="300" width="200">
@@ -77,7 +80,7 @@
             <li>Young GameMakers (2021)</li>
             <li>Robotic Escape (2022)</li>
             <li> Website Wizard (2023)</li>
-            <li> DISSCOVER Learning Journey 2024-Designing Aerial Shows</li>
+            <li> DISCOVER Learning Journey 2024-Designing Aerial Shows</li>
         </ul>
         <h2> School-based and Edusave Awards</h2>
         <ul>
@@ -90,6 +93,7 @@
             <li> 2022: Catch Me Shine!</li>
             <li> 2023: Edusave Scholarship</li>
             <li> 2023: Edusave Award for Achievement, Good Leadership and Service (EAGLES)</li>
+            <li> 2024: Team Excellene Award in DISCOVER Learning Journey 2024-Designing Aerial Shows</li>
         </ul>
         
         <h2><u> Personal Information* </u></h2>
