--- a/myfirstwebpage.html
+++ b/myfirstwebpage.html
@@ -21,8 +21,14 @@
         </table>
         </div>
         <h1> About Me</h1>
-        <br>
-        <p> I am a Primary 6 pupil who is fascinated by the digital world. My love for technology stems from the first time I used my father's computer. Since then, I have pursued my passion and continued to work to being a web designer in hopes of helping others one day. I am also a great leader who can communicate effectively with my team members. With many experience in handling projects, I have learnt how to manage my team members when I work with them and will strive to do my best, possessing a positive mindset.</p>
+        <p> I am a Primary 6 pupil who is fascinated by the digital 
+        <p>world. My love for technology stems from the first time</p>
+        <p>I used my father's computer. Since then, I have pursued</p>
+        <p>my passion and continued to work to being a web designer in</p>
+        <p>hopes of helping others one day. I am also a great leader who</p>
+        <p>can communicate effectively with my team members. With much</p>
+        <p>experience in handling projects, I have learnt how to manage </p>
+        <p>my team members when I work with them and will strive to do my best, possessing a positive mindset.</p>
         <h1><u>Introduction Message</u> </h1>
         <div class="dropdown">
             <img src="IMG_9275.jpg" height="300" width="200">
