--- a/myfirstwebpage.html
+++ b/myfirstwebpage.html
@@ -21,14 +21,7 @@
         </table>
         </div>
         <h1> About Me</h1>
-        <p> I am a Primary 6 pupil who is fascinated by the digital 
-        <p>world. My love for technology stems from the first time</p>
-        <p>I used my father's computer. Since then, I have pursued</p>
-        <p>my passion and continued to work to being a web designer in</p>
-        <p>hopes of helping others one day. I am also a great leader who</p>
-        <p>can communicate effectively with my team members. With much</p>
-        <p>experience in handling projects, I have learnt how to manage </p>
-        <p>my team members when I work with them and will strive to do my best, possessing a positive mindset.</p>
+        <p> I am a Primary 6 student studying in <a href="https.//meetohschool.edu.sg"> Mee Toh School</a> with a passion in technology. My love for technology stems from the time I used my father's computer. I explored the digital realm with it, visiting different pages and apps. Since then, I desired to be a game designer and am working hard to pursue my dreams. I am also a great leader who can effectively communicate with my team members. With much experience, I have learnt how to handle projects, possessing a positive mindset in the pursuit of excellence. </p>
         <h1><u>Introduction Message</u> </h1>
         <div class="dropdown">
             <img src="IMG_9275.jpg" height="300" width="200">
