--- a/myfirstwebpage.html
+++ b/myfirstwebpage.html
@@ -64,17 +64,20 @@
             <li> Media Production (Canva and Microsoft Office)</li>
             <li> Post-production (Capcut)</li>
         </ul>
-        <h2> Experiences</h2>
+        <h2> School-based Experiences</h2>
         <ul>
             <li>Canon Immersion Programme</li>
             <li>Northzone Friendship Hackathon 2022</li>
             <li>Our Schools, Our Stories (2023 and 2024) (OSOS)</li>
             <li>Schools Digital Media Awards 2024 (SDMA 2024)</li>
             <li>Leadership Workshops (hosted by Halogen Foundation, faciliated in school)</li>
+            <li> DISCOVER Learning Journey 2024-Designing Aerial Shows</li>
+        </ul>
+        <h2> Personal Experiences</h2>
+        <ul>
             <li>Young GameMakers (2021)</li>
             <li>Robotic Escape (2022)</li>
             <li> Website Wizard (2023)</li>
-            <li> DISCOVER Learning Journey 2024-Designing Aerial Shows</li>
         </ul>
         <h2> School-based and Edusave Awards</h2>
         <ul>
