--- a/Projects.html
+++ b/Projects.html
@@ -38,11 +38,12 @@
         <h1><u> Projects </u></h1>
             <p> Welcome to my Projects Table </p>
             <p> Here, you can see my coding projects. </p>
+            <p> <a href="https://scratch.mit.edu/search/projects?q=straightscr_fan"> Click here for my Scratch Profile!</a></p>
         <table border="1" id="tablestyle">
             <tr>
-                <td> <img src="Screenshot (1).png" height="135" width="240"> </td>
+                <td> <img src="Screenshot (1).png" height="135" width="240"><br> <a href="https://scratch.mit.edu/projects/622409294/"> Click me to play it!</a> </td>
                 <td> This is "Balloon Clicker". It is my first ever personal project created using the mBot tool.</td>
-                <td> <img src="Screenshot (2).png"  height="135" width="240"> </td>
+                <td> <img src="Screenshot (2).png"  height="135" width="240"><br> <a href="https://scratch.mit.edu/projects/638286813/"> Click me to play it! </a></td>
                 <td> This is called "Magic Story". It is based on a magician bringing "you" to a magical place...</td>
             </tr>
             <tr>
@@ -56,6 +57,15 @@
                 <td> This is a screenshot of another website I coded. <a href="Project.html"> Click me to view it!</a></td>
             </tr>
         </table>       
+        <h2> Photos Portfolio</h2>
+        <table>
+            <tr>
+                <th> Photos</th>
+            </tr>
+            <tr>
+                <td> <img src="idk</td>
+            </tr>
+        </table>
         </div>
         <p> PS: Here is your side mission. Find an easter egg in this website.</p>
         <br>
