--- a/Projects.html
+++ b/Projects.html
@@ -63,7 +63,9 @@
                 <th> Photos</th>
             </tr>
             <tr>
-                <td> <img src="idk</td>
+                <td> <img src="idk what to name this.jpg"></td>
+                <td> <img src="boats.jpg"></td>
+                <td> <img src="scammed.jpg"</td>
             </tr>
         </table>
         </div>
