--- a/Projects.html
+++ b/Projects.html
@@ -38,8 +38,6 @@
         <h1><u> Projects </u></h1>
             <p> Welcome to my Projects Table </p>
             <p> Here, you can see my coding projects. </p>
-            <p> <a href="https://scratch.mit.edu/search/projects?q=straightscr_fan"> Click here for my Scratch Profile!</a></p>
-        <table border="1" id="tablestyle">
             <tr>
                 <td> <img src="Screenshot (1).png" height="135" width="240"><br> <a href="https://scratch.mit.edu/projects/622409294/"> Click me to play it!</a> </td>
                 <td> This is "Balloon Clicker". It is my first ever personal project created using the mBot tool.</td>
@@ -50,7 +48,7 @@
                 <td> <img src="mbot.jpg" height="200" width="200"> </td>
                 <td> I have completed Level 3 - Robotic Escape of the Young Coder Programme in 2022 </td>
                 <td> <img src="scratch.jpeg"> </td>
-                <td> I also completed Level 2 of the Young Coder Programme in 2021 </td>
+                <td> I also completed Level 2 of the Young Coder Programme in 2021 <br>https://scratch.mit.edu/projects/638286813/</td>
             </tr>
             <tr>
                 <td> <img src="haha.png" width="404" height="207"> </td>
