--- a/Projects.html
+++ b/Projects.html
@@ -48,7 +48,7 @@
                 <td> <img src="mbot.jpg" height="200" width="200"> </td>
                 <td> I have completed Level 3 - Robotic Escape of the Young Coder Programme in 2022 </td>
                 <td> <img src="scratch.jpeg"> </td>
-                <td> I also completed Level 2 of the Young Coder Programme in 2021 <br>https://scratch.mit.edu/projects/638286813/</td>
+                <td> I also completed Level 2 of the Young Coder Programme in 2021 <br><a href="https://scratch.mit.edu/projects/638286813/"> Click this to view my profile!</a></td>
             </tr>
             <tr>
                 <td> <img src="haha.png" width="404" height="207"> </td>
