--- a/Projects.html
+++ b/Projects.html
@@ -38,6 +38,7 @@
         <h1><u> Projects </u></h1>
             <p> Welcome to my Projects Table </p>
             <p> Here, you can see my coding projects. </p>
+        <table>
             <tr>
                 <td> <img src="Screenshot (1).png" height="135" width="240"><br> <a href="https://scratch.mit.edu/projects/622409294/"> Click me to play it!</a> </td>
                 <td> This is "Balloon Clicker". It is my first ever personal project created using the mBot tool.</td>
@@ -48,7 +49,7 @@
                 <td> <img src="mbot.jpg" height="200" width="200"> </td>
                 <td> I have completed Level 3 - Robotic Escape of the Young Coder Programme in 2022 </td>
                 <td> <img src="scratch.jpeg"> </td>
-                <td> I also completed Level 2 of the Young Coder Programme in 2021 <br><a href="https://scratch.mit.edu/projects/638286813/"> Click this to view my profile!</a></td>
+                <td> I also completed Level 2 of the Young Coder Programme in 2021 </td>
             </tr>
             <tr>
                 <td> <img src="haha.png" width="404" height="207"> </td>
