--- a/Projects.html
+++ b/Projects.html
@@ -38,7 +38,7 @@
         <h1><u> Projects </u></h1>
             <p> Welcome to my Projects Table </p>
             <p> Here, you can see my coding projects. </p>
-        <table>
+        <table border="1">
             <tr>
                 <td> <img src="Screenshot (1).png" height="135" width="240"><br> <a href="https://scratch.mit.edu/projects/622409294/"> Click me to play it!</a> </td>
                 <td> This is "Balloon Clicker". It is my first ever personal project created using the mBot tool.</td>
