--- a/Projects.html
+++ b/Projects.html
@@ -49,7 +49,7 @@
                 <td> <img src="mbot.jpg" height="200" width="200"> </td>
                 <td> I have completed Level 3 - Robotic Escape of the Young Coder Programme in 2022 </td>
                 <td> <img src="scratch.jpeg"> </td>
-                <td> I also completed Level 2 of the Young Coder Programme in 2021 <a href="https://scratch.mit.edu/search/projects?q=straightscr_fan"> Click to view my profile!</td>
+                <td> I also completed Level 2 of the Young Coder Programme in 2021<br> <a href="https://scratch.mit.edu/search/projects?q=straightscr_fan"> Click to view my profile!</td>
             </tr>
             <tr>
                 <td> <img src="haha.png" width="404" height="207"> </td>
