--- a/myfirstwebpage.html
+++ b/myfirstwebpage.html
@@ -63,6 +63,7 @@
             <li> Photography </li>
             <li> Media Production (Canva and Microsoft Office)</li>
             <li> Post-production (Capcut)</li>
+            <li> Micro:bit</li>
         </ul>
         <h2> School-based Experiences</h2>
         <ul>
