--- a/myfirstwebpage.html
+++ b/myfirstwebpage.html
@@ -42,7 +42,7 @@
             <li> 2021: Class Monitor</li>
             <li> 2022: Junior Prefect</li>
             <li> 2023-2024: Prefect</li>
-            <li> 2023-2024: CCA Leader</li>
+            <li> 2023-2024: CCA Leader-Infocomm Club</li>
         </ul>
         <h2> CCA Contributions</h2>
         <ul>
