--- a/myfirstwebpage.html
+++ b/myfirstwebpage.html
@@ -60,7 +60,7 @@
         <ul>
             <li> HTML and CSS Coding</li>
             <li> Scratch</li>
-            <li> Photography </li>
+            <li> Photography and Videography</li>
             <li> Media Production (Canva and Microsoft Office)</li>
             <li> Post-production (Capcut)</li>
             <li> Micro:bit</li>
@@ -73,6 +73,9 @@
             <li>Schools Digital Media Awards 2024 (SDMA 2024)</li>
             <li>Leadership Workshops (hosted by Halogen Foundation, faciliated in school)</li>
             <li> DISCOVER Learning Journey 2024-Designing Aerial Shows</li>
+            <li> Raffles Math Olympiad 2024</li>
+            <li> Asia Pacific Math Olympiad for Primary Schools 2024 (APMOPS)</li>
+            <li> National Math Olympiad of Singapore 2023 (NMOS)</li>
         </ul>
         <h2> Personal Experiences</h2>
         <ul>
@@ -91,7 +94,10 @@
             <li> 2022: Catch Me Shine!</li>
             <li> 2023: Edusave Scholarship</li>
             <li> 2023: Edusave Award for Achievement, Good Leadership and Service (EAGLES)</li>
-            <li> 2024: Team Excellene Award in DISCOVER Learning Journey 2024-Designing Aerial Shows</li>
+            <li> 2023: Bronze Award - National Math Olympiad of Singapore
+            <li> 2024: Team Excellene Award - DISCOVER Learning Journey 2024-Designing Aerial Shows</li>
+            <li> 2024: Certificate of Merit - Raffles Math Olympiad 2024</li>
+            <li> 2024: Bronze Award - Asia-Pacific Math Olympiad for Primary Schools 2024 (APMOPS 2024)</li>
         </ul>
         <hr> 
         <h2><u> Personal Information* </u></h2>
