--- a/myfirstwebpage.html
+++ b/myfirstwebpage.html
@@ -21,7 +21,7 @@
         </table>
         </div>
         <h1> About Me</h1>
-        <p> I am a Primary 6 student studying in <a href="https://meetohschool.edu.sg"> Mee Toh School</a> with a passion in technology. My love for technology stems from the time I used my father's computer. I explored the digital realm with it, visiting different pages and apps. Since then, I desired to be a game designer and am working hard to pursue my dreams. I am also a great leader who can effectively communicate with my team members. With much experience, I have learnt how to handle projects, possessing a positive mindset in the pursuit of excellence. </p>
+        <p> I am a Primary 6 student studying in <a href="https://www.meetoh.moe.edu.sg/"> Mee Toh School</a> with a passion in technology. My love for technology stems from the time I used my father's computer. I explored the digital realm with it, visiting different pages and apps. Since then, I desired to be a game designer and am working hard to pursue my dreams. I am also a great leader who can effectively communicate with my team members. With much experience, I have learnt how to handle projects, possessing a positive mindset in the pursuit of excellence. </p>
         <hr>
         <h1><u>Introduction Message</u> </h1>
         <div class="dropdown">
