--- a/Hobbies.html
+++ b/Hobbies.html
@@ -40,12 +40,12 @@
         <p> NOTE: Please scroll to the right to look at sports!</p>
         <table border="4" id="tablestyle">
             <tr>
-                <th> Games </th>
+                <th> Video Games </th>
                 <th> Desc. </th>
                 <th> Developer</th>
                 <th> Hyperlink </th>
                 <th> Game Trailer </th>
-                <th> Sports and Games </th>
+                <th> Sports and Activities</th>
                 <th> Desc. </th>
                 <th> Hyperlink </th>
             </tr>
