--- a/Hobbies.html
+++ b/Hobbies.html
@@ -37,7 +37,7 @@
         <p> Welcome to my Hobbies Page.</p>
         <p> Here, you can see some of the things I do when I'm bored.</p>
         <p> There are also useful links if you would like to check them out.</p>
-        <p> NOTE: Please scroll to the right to look at sports!</p>
+        <p> NOTE: Please scroll to the right to look at sports and activities!</p>
         <table border="4" id="tablestyle">
             <tr>
                 <th> Video Games </th>
